[package]
name = "tokio-actors"
version = "0.1.0"
edition = "2021"
description = "Zero-ceremony, Tokio-native actors with strong typing and production-ready edge case handling"
license = "MIT OR Apache-2.0"
authors = ["Saddam Uwejan (Sam) <saddamuwejan@gmail.com>"]
repository = "https://github.com/uwejan/tokio-actors"
readme = "README.md"
homepage = "https://github.com/uwejan/tokio-actors"
documentation = "https://docs.rs/tokio-actors"
keywords = ["actors", "tokio", "async", "agents", "llm"]
categories = ["asynchronous", "concurrency", "rust-patterns"]
exclude = ["design-arch.md", "notes.md", "publish.md", ".github/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
async-trait = "0.1"
thiserror = "2.0.17"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-util = { version = "0.7", features = ["full"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }

[[bench]]
name = "actor_bench"
harness = false
